# musical-octo-happiness

./: .gitignore  CMakeLists.txt  CMakeSettings.json  ConsoleApplication1.cpp  ConsoleApplication1.sln  ConsoleApplication1.vcxproj  ConsoleApplication1.vcxproj.filters  brightnesseffect.cpp  brightnesseffect.h  effect.cpp  effect.h  helper.cpp  helper.h  keyboardrhythmsource.cpp  keyboardrhythmsource.h  main.cpp  negativeeffect.cpp  negativeeffect.h  rhythmsource.h  timer.cpp  timer.h
ConsoleApplication1/: ConsoleApplication1.cpp  ConsoleApplication1.vcxproj  ConsoleApplication1.vcxproj.filters
ConsoleApplication1/x64/Debug/: vc141.idb
ConsoleApplication1/x64/Debug/ConsoleA.59EEF77E.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ConsoleApplication1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Debug/: ConsoleApplication1.ilk
